--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <div class="brand-name">CodeWorld</div>
         <ul class="nav">
             <li class="nav-item"><a href="/" class="nav-link active">Home</a></li>
-            <li class="nav-item"><a href="/" class="nav-link">Project</a></li>
-            <li class="nav-item"><a href="/" class="nav-link">Blogs</a></li>
+            <li class="nav-item"><a href="project.html" class="nav-link">Project</a></li>
+            <li class="nav-item"><a href="blogs.html" class="nav-link">Blogs</a></li>
         </ul>
     </nav>
     <header>
