--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
         <div  class="container">
             <h2 class="text-center sec-header">Projects</h2>
             <p class="sec-content">I like to showcase my work and thus, you can see my project hosted online.</p>
-            <div style="margin-top: 3rem; margin-bottom:3rem;"><a href="/" class="btn btn-secondary-outline">See Project</a></div>
+            <div style="margin-top: 3rem; margin-bottom:3rem;"><a href="project.html" class="btn btn-secondary-outline">See Project</a></div>
         </div>
     </section>
     <section class="bg-grey">
         <div  class="container">
             <h2 class="text-center sec-header">Blogs</h2>
             <p class="sec-content">I am also working on some technical and non technical blogs. I like to document my journey of learning.</p>
-            <div style="margin-top: 3rem; margin-bottom:3rem;"><a href="/" class="btn btn-secondary">See Project</a></div>
+            <div style="margin-top: 3rem; margin-bottom:3rem;"><a href="blogs.html" class="btn btn-secondary">See Project</a></div>
         </div>
     </section>
     <footer>
