--- a/blogs.html
+++ b/blogs.html
@@ -39,7 +39,7 @@
                 </li>
                 <hr>
                 <li>
-                    <h2 class="pro-sec-header"><a href="blogThree.html" class="link">Dummy  Three</a></h2>
+                    <h2 class="pro-sec-header"><a href="blogThree.html" class="link">Dummy Blog Three</a></h2>
                     <small style="font-size: 1rem;">November, 2020</small>
                     <p class="pro-sec-content">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy.</p>
                     
