--- a/project.html
+++ b/project.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav>
-        <div class="brand-name">CodeWorld</div>
+        <div class="brand-name"><a href="index.html" class="logo-link">CodeWorld</a></div>
         <ul class="nav">
             <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
             <li class="nav-item"><a href="project.html" class="nav-link active">Project</a></li>
