--- a/project.html
+++ b/project.html
@@ -43,11 +43,11 @@
                 </li>
                 <hr>
                 <li>
-                    <h2 class="pro-sec-header">Are you a marvel fan?</h2>
+                    <h2 class="pro-sec-header">How Much Do You Know About India?</h2>
                     <small style="font-size: 1rem;">November, 2020</small>
                     <p class="pro-sec-content">Do you know marvel cinematic universe? Let's play a quiz and see.</p>
-                    <div class="my-3"><span><a href="/" class="btn btn-secondary btn-sm">Live Project</a></span><span style="float: right;">
-                   <a href="/" class="btn btn-secondary-outline btn-sm">View Source</a></span></div>
+                    <div class="my-3"><span><a href="https://repl.it/@Abdul127001/MarkTwo?embed=1&output=1" class="btn btn-secondary btn-sm">Live Project</a></span><span style="float: right;">
+                   <a href="https://github.com/Abdul127001/MarkTwo" class="btn btn-secondary-outline btn-sm">View Source</a></span></div>
                    <div style="clear: both;"></div>
 
                 </li>
@@ -56,8 +56,8 @@
                     <h2 class="pro-sec-header">How Well Do You Know Me</h2>
                     <small style="font-size: 1rem;">November, 2020</small>
                     <p class="pro-sec-content">A CLI app build with nodeJS. You can send this to your friends and find out who really knows you.</p>
-                    <div class="my-3"><span><a href="/" class="btn btn-secondary btn-sm">Live Project</a></span><span style="float: right;">
-                   <a href="/" class="btn btn-secondary-outline btn-sm">View Source</a></span></div>
+                    <div class="my-3"><span><a href="https://repl.it/@Abdul127001/MarkOne?embed=1&output=1" class="btn btn-secondary btn-sm">Live Project</a></span><span style="float: right;">
+                   <a href="https://github.com/Abdul127001/MarkOne" class="btn btn-secondary-outline btn-sm">View Source</a></span></div>
                    <div style="clear: both;"></div>
 
                 </li>
