adding projects link

--- a/project.html
+++ b/project.html
@@ -36,8 +36,8 @@
                     <h2 class="pro-sec-header">Minionese</h2>
                     <small style="font-size: 1rem;">November, 2020</small>
                     <p class="pro-sec-content">Are you a fan of minions? Did you know that the gibberish they say is an actual language. Use the translator to convert your text from English to Minion speak or Banana language.</p>
-                    <div class="my-3"><span><a href="/" class="btn btn-secondary btn-sm">See Project</a></span><span style="float: right;">
-                   <a href="/" class="btn btn-secondary-outline btn-sm">View Source</a></span></div>
+                    <div class="my-3"><span><a href="https://abdul127001-markfour-minionslanguagetranslator.netlify.app/" class="btn btn-secondary btn-sm">See Project</a></span><span style="float: right;">
+                   <a href="https://github.com/Abdul127001/MarkFour" class="btn btn-secondary-outline btn-sm">View Source</a></span></div>
                    <div style="clear: both;"></div>
 
                 </li>
@@ -45,7 +45,7 @@
                 <li>
                     <h2 class="pro-sec-header">How Much Do You Know About India?</h2>
                     <small style="font-size: 1rem;">November, 2020</small>
-                    <p class="pro-sec-content">Do you know marvel cinematic universe? Let's play a quiz and see.</p>
+                    <p class="pro-sec-content">Do you know About India Country? Let's Play A Quiz And See How Much Do You Know About It.</p>
                     <div class="my-3"><span><a href="https://repl.it/@Abdul127001/MarkTwo?embed=1&output=1" class="btn btn-secondary btn-sm">Live Project</a></span><span style="float: right;">
                    <a href="https://github.com/Abdul127001/MarkTwo" class="btn btn-secondary-outline btn-sm">View Source</a></span></div>
                    <div style="clear: both;"></div>
