--- a/project.html
+++ b/project.html
@@ -31,6 +31,16 @@
                    <div style="clear: both;"></div>
 
                 </li>
+                <hr>
+                <li>
+                    <h2 class="pro-sec-header">Pirates Speak</h2>
+                    <small style="font-size: 1rem;">November, 2020</small>
+                    <p class="pro-sec-content">Are you a fan of captain Jack Sparrow? Did you know that the gibberish they say is an actual language. Use the translator to convert your text from English to Pirates speak language.</p>
+                    <div class="my-3"><span><a href="https://abdul127001-pirates-speak-translator.netlify.app/" class="btn btn-secondary btn-sm">See Project</a></span><span style="float: right;">
+                   <a href="https://github.com/Abdul127001/MarkSix" class="btn btn-secondary-outline btn-sm">View Source</a></span></div>
+                   <div style="clear: both;"></div>
+
+                </li>
 <hr>
                 <li>
                     <h2 class="pro-sec-header">Minionese</h2>
