--- a/project.html
+++ b/project.html
@@ -21,7 +21,17 @@
     </header>
     <section>
         <div class="container">
-            <ul class="pro-nav" revered>
+            <ul class="pro-nav" reversed>
+                <li>
+                    <h2 class="pro-sec-header">DefinitionOfLanguages</h2>
+                    <small style="font-size: 1rem;">November, 2020</small>
+                    <p class="pro-sec-content">Find Definions oF HTML, JAVASCRIPT, REACT & Node.js Using This App In Simple Way.</p>
+                    <div class="my-3"><span><a href="https://et2ko.csb.app/" class="btn btn-secondary btn-sm">See Project</a></span><span style="float: right;">
+                   <a href="https://github.com/Abdul127001/MarkSeven" class="btn btn-secondary-outline btn-sm">View Source</a></span></div>
+                   <div style="clear: both;"></div>
+
+                </li>
+                <hr>
                 <li>
                     <h2 class="pro-sec-header">Emoji Interpreter</h2>
                     <small style="font-size: 1rem;">November, 2020</small>
